# ib-stream

./: .gitignore  .production-env  AUTO_RECOVERY.md  BDD_KERNEL_SUMMARY.md  CLAUDE.md  Makefile  Makefile.new-config  README.md  README_TESTING.md  TEST_EXECUTION_SUMMARY.md  TICK_TYPES.md  V2_TO_V3_CONVERTER_README.md  config-diff.py  config-migrate.py  config-watch.py  convert_v2_to_v3.py  demo_results_summary.md  demo_websocket_working.py  generate_instance_config.py  ib.py  ntp_sync_plan.md  run_tests.py  standalone_converter.py  start-production.sh  start-supervisor.sh  supervisor-development.conf  supervisor-production.conf  supervisor-wrapper.sh  supervisor.conf  test_conversion_integrity.py  test_converter.py  test_trading_hours.py  test_v3_storage.py  test_websocket.py  tws-build-instructions.md  tws-python-api-usage.md  validate_categorical_integration.py  validate_categorical_properties.py  validate_storage_categorical_properties.py
.claude/: settings.local.json
config/: .env.development  .env.production
docs/: CODE_REVIEW_V2.md  SECURITY_RECOMMENDATIONS.md  STORAGE_OPTIMIZATION_SPEC.md  TECHNICAL_DEBT.md  (+2 more)
ib-stream/: .env.development  README.md  REQUIREMENTS.md  ib-stream-main.conf  ib-stream-production.conf  ib-stream-query.conf  pyproject.toml  supervisord.conf  test_storage.py  time-monitor.service
ib-stream/config/: .env.development  .env.production  development-with-storage.env  development.env  instance.env  production-server.env  production.env  query-only.env  remote-gateway.env  ssh-tunnel.env  staging.env
ib-stream/config/templates/: development-api-only.env  development-recording.env  development-with-storage.env  migration-test.env  testing-multi-client.env
ib-stream/docs/: ib-stream-v2-refactor.md  inconsistent-api-v1.md  migration-and-development.md  postgresql-metadata-tracking.md  protobuf-storage-stream-indexing.md  protocol.md  stream-storage-and-caching.md  stream-storage-options-enhanced.md  streaming-api-server.md  streaming-websocket.md
ib-stream/logs/: time_drift_data.jsonl  time_drift_detailed.jsonl
ib-stream/reports/: time_drift_analysis_report.md
ib-stream/scripts/: README.md  migrate-environment.sh  start-development.sh  start-production.sh  start-staging.sh  stop-environment.sh  test-reconnection.sh  time_monitor.py
ib-stream/src/ib_stream/: api_server.py  api_server_original.py  app_lifecycle.py  background_stream_manager.py  config.py  config_v2.py  contract_client.py  formatters.py  protocol_types.py  sse_response.py  state_container.py  stream.py  stream_id.py  stream_manager.py  streaming_app.py  streaming_core.py  utils.py  ws_manager.py  ws_response.py  ws_schemas.py
ib-stream/src/ib_stream/components/: __init__.py  background_orchestrator.py  connection_manager.py  health_monitor.py  stream_lifecycle_manager.py  test_categorical_properties.py
ib-stream/src/ib_stream/endpoints/: buffer.py  health.py  management.py  streaming.py  v3.py  websocket.py
ib-stream/src/ib_stream/models/: __init__.py  background_health.py
ib-stream/src/ib_stream/services/: __init__.py  stream_health_service.py
ib-stream/src/ib_stream/storage/: __init__.py  buffer_query.py  categorical_storage.py  json_storage.py  metrics.py  multi_storage.py  multi_storage_v3.py  multi_storage_v4.py  postgres_index.py  protobuf_storage.py  v2_to_v3_converter.py  v3_json_storage.py  v3_protobuf_storage.py
ib-stream/src/ib_stream/storage/proto/: __init__.py  tick_message_v3.proto  tick_message_v3_pb2.py  tick_stream.proto  tick_stream_pb2.py
ib-stream/test_storage/json/2025/07/10/17/: test_stream_0.jsonl  test_stream_1.jsonl  test_stream_2.jsonl  test_stream_3.jsonl  test_stream_4.jsonl
ib-stream/test_storage/protobuf/2025/07/10/17/: test_stream_0.pb  test_stream_1.pb  test_stream_2.pb  test_stream_3.pb  test_stream_4.pb
ib-studies/: README.md  demo_delta.py  pyproject.toml  test_cancel.py  test_error_fix.py  test_httpx_stream.py  test_simple_delta.py  test_sse.py
ib-studies/docs/: bollinger-bands-specification.md  ib-studies-architecture.md  statistics-utils.md  v3-migration-guide.md  vwap-specification.md
ib-studies/ib_studies/: __init__.py  __main__.py  cli.py  models.py  multi_stream_client.py  multi_study_runner.py  statistics_utils.py  stream_client.py  timezone_utils.py  v2_utils.py  v3_historical_client.py  v3_stream_client.py  ws_client.py
ib-studies/ib_studies/formatters/: __init__.py  base.py  human.py  json.py
ib-studies/ib_studies/studies/: __init__.py  base.py  bollinger_bands.py  delta.py  multi_delta.py  passthrough.py  vwap.py
ib-studies/tests/: __init__.py  test_delta.py  test_v3_clients.py
(+61 files in other folders)
