[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ib-studies"
version = "0.1.0"
description = "Real-time market data analysis using IB-Stream"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seth"},
]
keywords = ["trading", "market-data", "interactive-brokers", "delta", "order-flow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.25.0",
    "httpx-sse>=0.3.1",
    "websockets>=11.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",  # For better console output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]

[project.scripts]
ib-studies = "ib_studies.cli:main"

[project.urls]
Homepage = "https://github.com/seth/ib-studies"
Documentation = "https://github.com/seth/ib-studies/blob/main/README.md"
Repository = "https://github.com/seth/ib-studies"
Issues = "https://github.com/seth/ib-studies/issues"

[tool.hatch.build.targets.wheel]
packages = ["ib_studies"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ib_studies"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]